kubernetes/Ingress/ingress-example.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-depl
  labels:
    app: front
spec:
  replicas: 3
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          volumeMounts:
            - name: nginx-vol
              # Solo carpetas no archivps
              mountPath: /usr/share/nginx/html
          command: ["/bin/sed"]
          args:
            [
              "-i",
              "-e",
              '"s/HOSTNAME/$HOSTNAME/g" /usr/share/nginx/html/index.html'
            ]
      volumes:
        - name: nginx-vol
          configMap:
            name: nginx-config
---
apiVersion: v1
kind: Service
metadata:
  name: app-v1
  labels:
    app: front
spec:
  type: ClusterIP
  selector:
    app: front
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
