kubernetes/Ingress/ingress-rules-extended.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: "entrada1.mydomain.com"
      http:
        paths:
          - pathType: Prefix
            path: "/app1"
            backend:
              service:
                name: app-v1
                port:
                  number: 8080
          - pathType: Prefix
            path: "/app2"
            backend:
              service:
                name: api-server-svc
                port:
                  number: 9090
    - host: "entrada2.mydomain.com"
      http:
        paths:
          - pathType: Prefix
            path: "/servicio1"
            backend:
              service:
                name: app-v1
                port:
                  number: 8080
          - pathType: Prefix
            path: "/servicio2"
            backend:
              service:
                name: api-server-svc
                port:
                  number: 9090
