kubernetes/Ingress/ingress-rules.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: "app1.mydomain.com"
        http:
          paths:
            - pathType: Prefix
              path: "/"
              backend:
                service:
                  name: app-v1
                  port:
                    number: 8080
    - http:
        paths:
          - path: /test
            pathType: Prefix
            backend:
              service:
                name: app-v1
                port:
                  number: 8080
